updating and storing metrics

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ controller.cxx Monitor.cxx -o controller
+	g++ controller.cxx Monitor.cxx Message.cxx MetricType.cxx Metric.cxx MetricHandler.cxx `pkg-config --libs --cflags gtk+-2.0 libglade-2.0 sqlite3` -o controller
