--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g controller.cxx Monitor.cxx Message.cxx MetricType.cxx Metric.cxx MetricHandler.cxx -Ilib -lmysqlclient -lmysqlpp -L/usr/lib64/mysql/ -I/usr/include/mysql -I/usr/include/mysql++ -o controller
+	g++ -g controller.cxx Monitor.cxx Message.cxx MetricType.cxx Metric.cxx MetricHandler.cxx -std=c++0x -Ilib -lmysqlclient -lmysqlpp -L/usr/lib64/mysql/ -I/usr/include/mysql -I/usr/include/mysql++ -o controller
